--- a/templates/results.html
+++ b/templates/results.html
@@ -4,41 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Review Page</title>
-
-  <style>
-
-    .bg{
-        background-image: url("https://source.unsplash.com/1600x900/?job");
-    }
-
-    .form {
-    margin: 20px;
-    
-    border-radius: 25px;
-        border-color: black;
-        border-width: 5px;
-    }
-
-    .content{
-        color: azure;
-        padding: 8px;
-        border-radius: 25px;
-        border-style: double;
-        border-color: wheat;
-        border-width: 10px;
-        
-    }
-
-    .profile{
-            vertical-align: middle;
-            border-radius: 50%;
-            border-style: double;
-            border-color: wheat;
-        border-width: 10px;
-        margin-top: 15px;
-
-    }
-</style>
+  <link rel="stylesheet" href="../static/css/result_page.css">
 </head >
 
 <body class='bg'>
