--- a/templates/index.html
+++ b/templates/index.html
@@ -5,40 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wage Class Classification</title>
-    
-    <style>
-        .bg{
-            background-image: url("https://source.unsplash.com/1600x900/?job");
-        }
-
-        .form {
-        margin: 20px;
-        
-        border-radius: 25px;
-            border-color: black;
-            border-width: 5px;
-        }
-
-        .content{
-            color: azure;
-            padding: 8px;
-            border-radius: 25px;
-            border-style: double;
-            border-color: wheat;
-            border-width: 10px;
-            
-        }
-
-        .profile{
-                vertical-align: middle;
-                border-radius: 50%;
-                border-style: double;
-                border-color: wheat;
-            border-width: 10px;
-            margin-top: 15px;
-
-        }
-    </style>
+    <link rel="stylesheet" href="../static/css/index_page.css">
 </head>
 
     <body class='bg'>
